--- a/templates/core/include/sidebar.html
+++ b/templates/core/include/sidebar.html
@@ -30,7 +30,7 @@
 
     <!-- Nav Item - Charts -->
     <li class="nav-item">
-        <a class="nav-link" href="">
+        <a class="nav-link" href="{% url "update_request_list" %}">
             <i class="fas fa-fw fa-chart-area"></i>
             <span>Atualização</span>
         </a>
