--- a/templates/update_request/updaterequest_list.html
+++ b/templates/update_request/updaterequest_list.html
@@ -15,12 +15,11 @@
                 <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
                     <thead>
                     <tr>
-                        <th>Name</th>
-                        <th>Position</th>
-                        <th>Office</th>
-                        <th>Age</th>
-                        <th>Start date</th>
-                        <th>Salary</th>
+                        <th>Usuário</th>
+                        <th>Descrição</th>
+                        <th>Plataforma</th>
+                        <th>Ambiente</th>
+                        <th>Ação</th>
                     </tr>
                     </thead>
                     <tr>
