feat(update_request): create register update request view and form

--- a/templates/update_request/updaterequest_list.html
+++ b/templates/update_request/updaterequest_list.html
@@ -4,7 +4,7 @@
     <div class="container-fluid">
         <div class="d-sm-flex align-items-center justify-content-between mb-4">
             <h1 class="h3 mb-4 text-gray-800">Pedidos Atualização</h1>
-            <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm">
+            <a href="/updaterequest/register" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm">
                 <i class="fas fa-plus fa-sm text-white-50"></i> Pedir Atualização
             </a>
         </div>
